--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
     "vue-session": "^1.0.0"
